--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,6 +561,8 @@ font-size:20px;
     }
     .nav-pills{
         justify-content: center;
+        margin-top:30px;
+        margin-bottom: 30px;;
     }
     .nav-pills .nav-link{
 padding:5px 10px;
